[gd_scene load_steps=13 format=2]

[ext_resource path="res://bgImage1.jpg" type="Texture" id=1]
[ext_resource path="res://Main_page.gd" type="Script" id=2]
[ext_resource path="res://Kenney Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Kenney Future Narrow.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://wooden button.png" type="Texture" id=5]
[ext_resource path="res://wooden button press.png" type="Texture" id=6]
[ext_resource path="res://The Land of Her Serenity.mp3" type="AudioStream" id=7]
[ext_resource path="res://Button_Plate Click.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=26]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 8
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0, 0, 0, 0.00392157 )
shadow_color = Color( 0, 0, 0, 0.313726 )
shadow_size = 1

[sub_resource type="DynamicFont" id=28]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=29]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Main_page" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -328.0
margin_top = -2.0
margin_right = 1176.0
margin_bottom = 653.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -96.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
text = "Choose level to start"
align = 1

[node name="GameNameLabel1" type="RichTextLabel" parent="."]
anchor_top = -0.0208333
anchor_right = 0.743164
anchor_bottom = -0.0208333
margin_left = 108.0
margin_top = 76.0
margin_right = -323.0
margin_bottom = 149.0
rect_clip_content = false
hint_tooltip = "Only 1 Chest"
custom_colors/default_color = Color( 0.952941, 0.901961, 0.109804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 28 )
bbcode_enabled = true
bbcode_text = "[wave amp=5]Treasure[/wave]"
text = "Treasure"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameNameLabel" type="RichTextLabel" parent="."]
anchor_top = -0.0295139
anchor_right = 0.74707
anchor_bottom = -0.0295139
margin_left = 308.0
margin_top = 161.0
margin_right = -123.0
margin_bottom = 234.0
rect_clip_content = false
custom_colors/default_color = Color( 0.890196, 0.890196, 0.890196, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 28 )
bbcode_enabled = true
bbcode_text = "Defender"
text = "Defender"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EasyBtn" type="TextureButton" parent="."]
margin_left = -1085.0
margin_top = -267.0
margin_right = 1410.0
margin_bottom = 566.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1400, 633.333 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="EasyLabel" type="Label" parent="EasyBtn"]
margin_left = 739.992
margin_top = 189.999
margin_right = 819.992
margin_bottom = 221.999
rect_scale = Vector2( 13, 13 )
custom_fonts/font = SubResource( 29 )
text = "Easy"
align = 1
valign = 1

[node name="HardBtn" type="TextureButton" parent="."]
margin_left = -700.0
margin_top = -267.0
margin_right = 1795.0
margin_bottom = 566.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1400, 633.333 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="HardLabel" type="Label" parent="HardBtn"]
margin_left = 749.99
margin_top = 199.998
margin_right = 829.99
margin_bottom = 231.998
rect_scale = Vector2( 13, 13 )
custom_fonts/font = SubResource( 29 )
text = "Hard"
align = 1
valign = 1

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -1.0

[node name="OnClicked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[connection signal="pressed" from="EasyBtn" to="." method="_on_EasyBtn_pressed"]
[connection signal="pressed" from="HardBtn" to="." method="_on_HardBtn_pressed"]
